@@ -125,6 +125,7 @@ protected:
 	afx_msg void	OnLButtonDown(UINT nFlags, CPoint point);
 	afx_msg void	OnEditCopy();
 	afx_msg void	OnMouseMove(UINT nFlags, CPoint point);
+	afx_msg void	OnTimer(UINT_PTR nIDEvent);
 	afx_msg void	OnMouseLeave();
 	afx_msg void	OnChar(UINT nChar, UINT nRepCnt, UINT nFlags);
 	afx_msg void	OnCaretDown();
